# wakaama

./: .gitmodules
core/: .internals.h.swp  internals.h  objects.c  packet.c  registration.c
core/er-coap-13/: er-coap-13.c
examples/client/: .CMakeLists.txt.swp  .object_distance.c.swo  .object_distance.c.swp  .object_light.c.swo  .object_light.c.swp  CMakeLists.txt  lwm2mclient.c  lwm2mclient.h  object_actuation.c  object_device.c  object_distance.c  object_humidity.c  object_light.c  object_presence.c  object_temperature.c  test_object.c
examples/client/DHT11/: bbb_dht_read.c  bbb_mmio.c  test  test.c
examples/lightclient/: lightclient
examples/shared/: connection.c
